Form for adding location (not saving it to db yet)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Meteo</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css" />
+    <!-- <link rel="stylesheet" href="/static/css/bulma-calendar.min.css" /> -->
+    <script src="https://jsuites.net/v4/jsuites.js"></script>
+    <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
 </head>
 
 <body>
@@ -21,6 +24,9 @@
                                 Home
                             </a>
                             {% if current_user.is_authenticated %}
+                              <a href="{{ url_for('main.locations') }}" class="navbar-item">
+                                  Locations
+                              </a>
                               <a href="{{ url_for('main.profile') }}" class="navbar-item">
                                   Profile
                               </a>
@@ -42,12 +48,19 @@
         </div>
 
         <div class="hero-body">
-            <div class="container has-text-centered">
+            <div class="container">
                {% block content %}
                {% endblock %}
             </div>
         </div>
     </section>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="/static/js/utils.js"></script>
+    <!-- <script src="/static/js/bulma-calendar.min.js"></script> -->
+
+    {% block js %}
+    {% endblock %}
 </body>
 
 </html>
