--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="/static/css/bulma-calendar.min.css" /> -->
     <script src="https://jsuites.net/v4/jsuites.js"></script>
     <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" type="text/css" />
 </head>
 
 <body>
@@ -43,7 +44,7 @@
                             {% endif %}
                         </div>
                     </div>
-                </div>
+
             </nav>
         </div>
 
@@ -58,6 +59,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/static/js/utils.js"></script>
     <!-- <script src="/static/js/bulma-calendar.min.js"></script> -->
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 
     {% block js %}
     {% endblock %}
