--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -15,7 +15,34 @@
     {% endif %}
   {% endwith %}
 
+  <div class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <div class="box">
+        <h3 class="subtitle has-text-black is-3">
+          Overwrite existing measurements?
+        </h3>
+        <form id="load-data-form" class="form" method="POST" action="/locations/{{ location.id }}/load_data">
+          <div class="field is-grouped mt-5">
+            <div class="control">
+              <button id="overwrite-data-btn" class="button is-link">Yes, ovewrite existing</button>
+            </div>
+            <div class="control">
+              <button id="load-missing-data-btn" class="button is-link">No, fill missing</button>
+            </div>
+            <div class="control">
+              <button id="cancel-data-loading-btn" class="button is-link is-light">Cancel</button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <!-- Any other Bulma elements you want -->
+    </div>
+    <button id="close-modal-btn" class="modal-close is-large" aria-label="close"></button>
+  </div>
+
   <a class="button is-link" href="/measurements/new?location={{ location.id }}">Add new measurement</a>
+  <button id="load-data-btn" class="button is-primary modal-button ml-3" data-target="modal" aria-haspopup="true">Load historical data</button>
   <a class="button is-light ml-3" href="/locations">Back to locations</a>
 
   <div class="block mt-4">
@@ -98,6 +125,66 @@
       lengthChange: false,
       pageLength: 50,
     });
+
+    $('#load-data-form').submit(function(e) {
+      e.preventDefault();
+      var queryParams = {
+          "overwrite_existing": false
+      };
+      if (e.originalEvent.submitter.id === 'overwrite-data-btn') {
+        queryParams = {
+            "overwrite_existing": true
+        };
+      }
+      submitForm('#load-data-form', function() {
+          window.location = '/location/{{ location.id }}';
+      }, queryParams);
+    });
+
+
+    $('#load-data-btn').click(function(e) {
+      $('.modal').addClass('is-active');
+    });
+
+    $('#cancel-data-loading-btn').click(function(e) {
+      e.preventDefault();
+      $('.modal').removeClass('is-active');
+    });
+
+    // Functions to open and close a modal
+    function openModal($el) {
+      $el.classList.add('is-active');
+    }
+
+    function closeModal($el) {
+      $el.classList.remove('is-active');
+    }
+
+    function closeAllModals() {
+      (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+        closeModal($modal);
+      });
+    }
+
+    // Add a click event on various child elements to close the parent modal
+    (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+      const $target = $close.closest('.modal');
+
+      $close.addEventListener('click', () => {
+        closeModal($target);
+      });
+    });
+
+    // Add a keyboard event to close all modals
+    document.addEventListener('keydown', (event) => {
+      const e = event || window.event;
+
+      if (e.keyCode === 27) { // Escape key
+        closeAllModals();
+      }
+    });
   });
+
+
 </script>
 {% endblock %}
