Can set weights; Can delete locations

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,8 +28,8 @@
                               <a href="{{ url_for('main.locations') }}" class="navbar-item">
                                   Locations
                               </a>
-                              <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                                  Profile
+                              <a href="{{ url_for('main.weights') }}" class="navbar-item">
+                                  Weights
                               </a>
                               <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                   Logout
