--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -48,7 +48,7 @@
           </td>
           <td>
             <a class="has-text-link" href="/locations/{{ location.id }}/edit">Edit</a>
-            <!-- <a class="has-text-link" href="/locations/{{ location.id }}">Delete</a> -->
+            <a class="has-text-link ml-5" href="/locations/{{ location.id }}/delete">Delete</a>
           </td>
         </tr>
       {% endfor %}
