--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,9 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
                             </a>
+                            <a href="{{ url_for('main.chart') }}" class="navbar-item">
+                                Charts
+                            </a>
                             {% if current_user.is_authenticated %}
                               <a href="{{ url_for('main.locations') }}" class="navbar-item">
                                   Locations
@@ -60,6 +63,7 @@
     <script src="/static/js/utils.js"></script>
     <!-- <script src="/static/js/bulma-calendar.min.js"></script> -->
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
 
     {% block js %}
     {% endblock %}
